# china-steel-policy-watch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  update-and-deploy.yml
config/: sources.json
data/: items.json  status.json
docs/: 404.html  app.js  feed.xml  index.html  styles.css
docs/data/: items.json  latest.json  status.json
scripts/: schedule_gate.py
steelwatch/: __init__.py  cli.py  config.py  enrich.py  fetch.py  models.py  pipeline.py  render.py  schedule.py  util.py
steelwatch/collectors/: __init__.py  base.py  ec_have_your_say.py  eurlex.py  federal_register.py  gdelt.py  govuk.py
tests/: test_collectors.py  test_enrich.py  test_pipeline.py  test_render.py  test_schedule.py  test_util.py
tests/fixtures/: ec_have_your_say.json  eurlex_daily.html
