[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "china-steel-policy-watch"
version = "0.1.0"
description = "Daily China steel policy, trade-remedy and industry intelligence dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David Zhu" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "python-dateutil>=2.9,<3",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "ruff>=0.6,<1"]

[project.scripts]
steelwatch = "steelwatch.cli:main"

[tool.setuptools.packages.find]
include = ["steelwatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
